still fixing layout issues when deployed

--- a/temp-app/src/App.css
+++ b/temp-app/src/App.css
@@ -374,9 +374,9 @@ h2 {
 body{
   background-color: #80A1C1;
   /* display: flex;  */
-   width: auto;
-  height: 100vh;
-  margin: 0;
+   /* width: auto; */
+  /* height: 100vh; */
+  /* margin: 0; */
 }
 #lab_social_icon_footer {
   padding: 40px 0;
